# samp-essentials

./: CLEO.asi  README.md  SAMPFUNCS.asi
CLEO/(for developers)/cleo_sdk/: CLEO.h  CLEO.lib
CLEO/cleo_plugins/: SA.Audio.cleo  SA.DebugUtils.cleo  SA.FileSystemOperations.cleo  SA.GameEntities.cleo  SA.IniFiles.cleo  SA.Input.cleo  SA.Math.cleo  SA.MemoryOperations.cleo  SA.Sphere.cleo  SA.Text.cleo
SAMPFUNCS/(for developers)/SAMPFUNCS SDK/SannyBuilder Data/: SASCM.SAMPFUNCS.ini  classes.db  keywords.txt  mode.xml  opcodes.txt  sa.json
SAMPFUNCS/(for developers)/SAMPFUNCS SDK/cmake-sf-plugin/: CMakeLists.txt  CMakePresets.json
SAMPFUNCS/(for developers)/SAMPFUNCS SDK/cmake-sf-plugin/cmake/: FindSFAPI.cmake
SAMPFUNCS/(for developers)/SAMPFUNCS SDK/cmake-sf-plugin/src/: plugin.cpp
scripts/: ASI Loader ReadMe.txt
